# music-organizer

./: .cursorrules  .dockerignore  .env  .gitignore  .mergify.yml  ARCHITECTURE.md  CLAUDE.md  CODEMOD.md  Cargo.toml  Dockerfile  README.md  backend.just  biome.json  bun.ts  deny.toml  docker-compose.yaml  docker.just  frontend.just  justfile  log-to-tracing.yml  migrations.just  schema.sql
.cargo/: deny.toml
.github/workflows/: atlas-check.yml  ci.yml  frontend-lint.yml  release.yml
frontend/: .env.example  biome.json  codegen.ts  package.json  rspack.config.mjs  schema.graphql  tsconfig.json
frontend/src/: App.tsx  AppConfig.tsx  env.ts  frontend.tsx  index.dev.html  index.ts
frontend/src/components/: app-sidebar.tsx  audio-player.tsx  page.tsx  track-context-menu.tsx
frontend/src/components/form/: FormFieldContainer.tsx  FormSubmitButton.tsx  FormTextField.tsx  form-field.tsx  form-hooks.tsx  form-input.tsx
frontend/src/components/ui/: badge.tsx  field.tsx  sidebar.tsx  sort-button.tsx
frontend/src/graphql/: gql.ts  graphql.ts
frontend/src/lib/: download-file-query.ts  execute-graphql.ts  formatters.ts  get-url.ts  query-builder.ts  utils.ts
frontend/src/pages/: download.tsx  home.tsx  playlist.tsx  playlists.tsx  plex-auth-callback.tsx  plex-servers.tsx  plex-tracks.tsx  spotify-auth-callback.tsx  spotify-login.tsx  spotify-matched-tracks.tsx  spotify-unmatched-tracks.tsx  spotify.tsx  tracks.tsx  unimportable-files.tsx  wishlist.tsx  youtube-subscriptions.tsx  youtube.tsx
frontend/src/stores/: audio-player-store.ts
frontend/styles/: globals.css
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_tables.rs  m20251216_050017_unimportable_file.rs  m20251230_021238_create_playlist_table.rs  m20251230_165711_create_plex_servers_table.rs  m20260107_000001_add_track_identifiers.rs  m20260107_000002_create_spotify_tables.rs  m20260109_194726_add_irscs_to_tracks.rs  m20260113_012025_create_spotify_track.rs  m20260115_042234_rename_track_to_tracks.rs
migrations/: 20260115162942.sql  20260120225256_add_spotify.sql  20260124215521_spotify_to_local_matcher_tasks_table.sql  20260125173128_remove_sync_spotify_to_local_state.sql  20260201001303_add_youtube_vid_and_sub.sql  20260202010413_add_youtube_vid_and_sub.sql  20260220195407_add_spotify_match_candidates.sql  atlas.sum
music/: library.db
spotify-rs/spotify-rs/src/: client.rs  lib.rs  model.rs
spotify-rs/spotify-rs/src/endpoint/: album.rs  player.rs
spotify-rs/spotify-rs/src/model/: user.rs
src/: acoustid.rs  chromaprint.rs  config.rs  database.rs  file_hash.rs  import_track.rs  logging.rs  main.rs  musicbrainz.rs  soulseek.rs  test_utils.rs
src/entities/: album.rs  album_artist.rs  artist.rs  mod.rs  playlist.rs  playlist_track.rs  plex_server.rs  spotify_account.rs  spotify_match_candidate.rs  spotify_playlist.rs  spotify_playlist_sync_state.rs  spotify_to_local_matcher_tasks.rs  spotify_track.rs  spotify_track_download_failure.rs  spotify_track_playlist.rs  track.rs  track_artist.rs  unimportable_file.rs  wishlist_item.rs  youtube_subscription.rs  youtube_video.rs
src/http_server/: app.rs  cleanup_tasks.rs  error.rs  graphql.rs  graphql_error.rs  mod.rs  state.rs
src/http_server/graphql/: context.rs  mod.rs  playlist_mutations.rs  playlist_queries.rs  plex_library_refresh_mutations.rs  plex_library_refresh_queries.rs  plex_playlist_mutations.rs  plex_playlist_queries.rs  plex_server_mutations.rs  plex_server_queries.rs  plex_track_queries.rs  soulseek_mutations.rs  track_queries.rs  unimportable_file_queries.rs  youtube_mutations.rs  youtube_queries.rs
src/http_server/graphql/query_builder/: entity_sort_fields.rs  mod.rs
src/http_server/graphql/spotify/: context.rs  download_best_match_for_spotify_track.rs  match_existing_spotify_tracks_with_local.rs  mod.rs  spotify_mutations.rs  spotify_mutations_old.rs  spotify_queries.rs  spotify_queries_old.rs
src/http_server/graphql/spotify/matching_local_tracks/: llm_reranker.rs  matcher.rs  mod.rs  similarity_filter.rs  task.rs  types.rs
src/http_server/graphql/spotify/sync_spotify_playlist_to_local_library/: mod.rs  process_track.rs  sync_task.rs  task.rs
src/http_server/graphql/wishlist/: mod.rs
src/http_server/http_routes/: album_art_image.rs  audio_file.rs  download_file.rs  mod.rs
src/migrator/: mod.rs
src/ollama/: mod.rs  pick_best_for_track.rs
src/plex_rs/: all_tracks.rs  auth.rs  library_refresh.rs  mod.rs  playlist.rs  sync_playlist.rs
src/ports/: mod.rs  plex.rs  spotify.rs
src/services/: mod.rs  playlist.rs  soulseek_service.rs  track.rs
src/services/background/: mod.rs  youtube.rs
src/services/plex/: client.rs  mod.rs
src/services/spotify/: account.rs  client.rs  download_best_match_for_spotify_track.rs  matching.rs  mod.rs  sync.rs  sync_spotify_playlist_to_local.rs
src/services/spotify/matching_local_tracks/: matcher.rs  mod.rs  similarity_filter.rs  task.rs  task_db.rs
src/services/spotify/sync_spotify_playlist_to_local_library/: add_tracks_to_playlist.rs  create_sync_state.rs  process_track.rs  sync_task.rs
src/services/wishlist/: background_task.rs  mod.rs
src/services/youtube/: feed.rs  mod.rs  service.rs  types.rs
src/soulseek/: client.rs  download.rs  mod.rs  search.rs  types.rs
src/soulseek_tui/: app.rs  event.rs  input.rs  mod.rs  ui.rs  widgets.rs
src/spotify_rs/: auth.rs  client.rs  mod.rs  types.rs
