[package]
license = "MIT"
name = "music-manager"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
color-eyre = "0.6.5"
audiotags = "0.5.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
governor = "0.6"
musicbrainz_rs = "0.12.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10"
tokio = {version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
which = "8.0.0"
soulseek-rs-lib = "0.3.0"
unaccent = "0.1"
regex = { version = "1.10", features = ["unicode-perl"] }
futures = "0.3"
async-trait = "0.1"
ratatui = "0.28"
crossterm = "0.28"
backoff = { version = "0.4.0", features = ["tokio"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
axum = "0.8.7"
axum-macros = "0.5.0"
chrono = "0.4.42"
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-axum = "7.0.17"
tower-http = {version = "0.6.8", features = ["cors", "fs"] }
tower = "0.5.2"
thiserror = "2.0.17"
axum-range = "1.0.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
infer = "0.19.0"
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
