[package]
license = "MIT"
name = "music-manager"
version = "0.1.0"
edition = "2024"


[dependencies]
color-eyre = "0.6.5"
audiotags = "0.5.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
governor = "0.6"
musicbrainz_rs = "0.12.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10"
tokio = {version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
which = "8.0.0"
soulseek-rs-lib = "0.3.0"
unaccent = "0.1"
regex = { version = "1.10", features = ["unicode-perl"] }
futures = "0.3"
async-trait = "0.1"
ratatui = "0.30.0-beta"
crossterm = "0.29"
backon = "1.6.0"
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
axum = { version = "0.8.7", features = ["macros"] }
axum-macros = "0.5.0"
chrono = "0.4.42"
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-axum = "7.0.17"
tower-http = {version = "0.6.8", features = ["cors", "fs"] }
tower = "0.5.2"
thiserror = "2.0.17"
axum-range = "1.0.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
infer = "0.19.0"
url = "2.5.7"
urlencoding = "2.1.3"
futures-util = "0.3.31"
async-stream = "0.3.6"
tokio-stream = "0.1.18"

spotify-rs = { git = "https://github.com/kpfromer/spotify-rs", branch = "fix-for-unknown-tracks" }
# spotify-rs = "0.4.1"
tempfile = "3.24.0"
ollama-native = "1.0.2"
schemars = "1.2.0"
jaro_winkler = "0.1.0"
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
