[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.27"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
]
